--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
     <head>
         <link rel="stylesheet" href="Resume.css">
+        <link rel="stylesheet" href="https://kit-pro.fontawesome.com/releases/v5.12.1/css/pro.min.css">
     </head>
 <div class="wrapper">
     <div class="intro">
@@ -44,7 +45,7 @@
           </a>
         </div>
         <div class="info-section link">
-          <i class="fab fa-codepen"></i>
+          <i class="fab fa-linkedin"></i>
           <a target="_blank" rel="author" href="https://www.linkedin.com/in/krishneet-prasad/">
             <span>Linkedin</span>
           </a>
@@ -126,7 +127,7 @@
           <div class="title-icon">
             <i class="fas fa-tools"></i>
           </div>
-          <span>Developement Tools</span>
+          <span>Dev Tools</span>
         </div>
         <div class="detail-content">
           <ul class="tool-list">
@@ -141,7 +142,7 @@
             <li>
               <svg viewbox="0 0 100 100">
                 <circle cx="50" cy="50" r="45"></circle>
-                <circle class="cbar" cx="50" cy="50" r="45" style="--percent: 0.8"></circle>
+                <circle class="cbar" cx="50" cy="50" r="45" style="--percent: 0.6"></circle>
               </svg>
               <span class="tl-name">VMware</span>
               <span class="tl-exp">60%</span>
@@ -149,7 +150,7 @@
             <li>
               <svg viewbox="0 0 100 100">
                 <circle cx="50" cy="50" r="45"></circle>
-                <circle class="cbar" cx="50" cy="50" r="45" style="--percent: 0.7"></circle>
+                <circle class="cbar" cx="50" cy="50" r="45" style="--percent: 0.5"></circle>
               </svg>
               <span class="tl-name">Git</span>
               <span class="tl-exp">50%</span>
@@ -157,7 +158,7 @@
             <li>
               <svg viewbox="0 0 100 100">
                 <circle cx="50" cy="50" r="45"></circle>
-                <circle class="cbar" cx="50" cy="50" r="45" style="--percent: 0.74"></circle>
+                <circle class="cbar" cx="50" cy="50" r="45" style="--percent: 0.75"></circle>
               </svg>
               <span class="tl-name">Linux</span>
               <span class="tl-exp">75%</span>
@@ -177,23 +178,23 @@
           <div class="outer-frame">
             <ul class="favor-list">
               <li>
-                <i class="fas fa-gamepad"></i>
+                <i class=""></i>
+                <span>Frontend Development</span>
+              </li>
+              <li>
+                <i class=""></i>
                 <span></span>
               </li>
               <li>
-                <i class="fas fa-paw"></i>
+                <i class=""></i>
                 <span></span>
               </li>
               <li>
-                <i class="far fa-headphones-alt"></i>
+                <i class=""></i>
                 <span></span>
               </li>
               <li>
-                <i class="fas fa-book-spells"></i>
-                <span></span>
-              </li>
-              <li>
-                <i class="fas fa-user-edit"></i>
+                <i class=""></i>
                 <span></span>
               </li>
             </ul>
