--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       <div class="intro-section about">
         <h1 class="title">About me</h1>
         <p class="paragraph">
-          To-Do
+          Hi my name is Krishneet Prasad, I currently attend University of the Pacific in Stockton, California. I have experience in both Front-End and Back-End development and various Dev Tools.
         </p>
       </div>
       <div class="intro-section contact">
@@ -164,41 +164,6 @@
               <span class="tl-exp">75%</span>
             </li>
           </ul>
-        </div>
-  
-      </div>
-      <div class="detail-section interests">
-        <div class="detail-title">
-          <div class="title-icon">
-            <i class="fas fa-heart"></i>
-          </div>
-          <span>Interests</span>
-        </div>
-        <div class="detail-content">
-          <div class="outer-frame">
-            <ul class="favor-list">
-              <li>
-                <i class=""></i>
-                <span>Frontend Development</span>
-              </li>
-              <li>
-                <i class=""></i>
-                <span></span>
-              </li>
-              <li>
-                <i class=""></i>
-                <span></span>
-              </li>
-              <li>
-                <i class=""></i>
-                <span></span>
-              </li>
-              <li>
-                <i class=""></i>
-                <span></span>
-              </li>
-            </ul>
-          </div>
         </div>
       </div>
     </div>
