--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
         </div>
         <div class="detail-content">
           <div class="timeline-block">
-            <h1>Bachelor's of Science in Computer Science</h1>
+            <h1>Bachelor of Science in Computer Science</h1>
             <p>University of the Pacific, Stockton, CA</p>
             <time>2021 - 2025</time>
           </div>
