--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     </head>
 <div class="wrapper">
     <div class="intro">
-      <div class="profile">
+      <div class="header">
         <div class="photo">
           <img src="https://i.imgur.com/eRRmpCk.jpg">
         </div>
@@ -55,10 +55,10 @@
     <div class="detail">
       <div class="detail-section edu">
         <div class="detail-title">
-          <div class="title-icon">
+          <div class="title-pic">
             <i class="fas fa-user-graduate"></i>
           </div>
-          <span>Eduation</span>
+          <span>Education</span>
         </div>
         <div class="detail-content">
           <div class="timeline-block">
@@ -70,53 +70,53 @@
       </div>
       <div class="detail-section pg-skill">
         <div class="detail-title">
-          <div class="title-icon">
+          <div class="title-pic">
             <i class="fas fa-laptop-code"></i>
           </div>
-          <span>Programming skills</span>
+          <span>Programming Languages</span>
         </div>
         <div class="detail-content">
           <ul class="pg-list">
             <li>
               <span>HTML</span>
               <div class="sb-skeleton">
-                <div class="skillbar" style="--pgbar-length: 75%"></div>
+                <div class="skill_bar" style="--pgbar-length: 75%"></div>
               </div>
             </li>
             <li>
               <span>CSS</span>
               <div class="sb-skeleton">
-                <div class="skillbar" style="--pgbar-length: 75%"></div>
+                <div class="skill_bar" style="--pgbar-length: 75%"></div>
               </div>
             </li>
             <li>
               <span>Javascript</span>
               <div class="sb-skeleton">
-                <div class="skillbar" style="--pgbar-length: 50%"></div>
+                <div class="skill_bar" style="--pgbar-length: 50%"></div>
               </div>
             </li>
             <li>
               <span>C++</span>
               <div class="sb-skeleton">
-                <div class="skillbar" style="--pgbar-length: 75%"></div>
+                <div class="skill_bar" style="--pgbar-length: 75%"></div>
               </div>
             </li>
             <li>
               <span>Java</span>
               <div class="sb-skeleton">
-                <div class="skillbar" style="--pgbar-length: 75%"></div>
+                <div class="skill_bar" style="--pgbar-length: 75%"></div>
               </div>
             </li>
             <li>
               <span>Python</span>
               <div class="sb-skeleton">
-                <div class="skillbar" style="--pgbar-length: 60%"></div>
+                <div class="skill_bar" style="--pgbar-length: 60%"></div>
               </div>
             </li>
             <li>
               <span>PHP</span>
               <div class="sb-skeleton">
-                <div class="skillbar" style="--pgbar-length: 40%"></div>
+                <div class="skill_bar" style="--pgbar-length: 40%"></div>
               </div>
             </li>
           </ul>
@@ -124,7 +124,7 @@
       </div>
       <div class="detail-section tool-skill">
         <div class="detail-title">
-          <div class="title-icon">
+          <div class="title-pic">
             <i class="fas fa-tools"></i>
           </div>
           <span>Dev Tools</span>
@@ -134,7 +134,7 @@
             <li>
               <svg viewbox="0 0 100 100">
                 <circle cx="50" cy="50" r="45"></circle>
-                <circle class="cbar" cx="50" cy="50" r="45" style="--percent: 0.6"></circle>
+                <circle class="coutline" cx="50" cy="50" r="45" style="--percent: 0.6"></circle>
               </svg>
               <span class="tl-name">Photoshop</span>
               <span class="tl-exp">60%</span>
@@ -142,7 +142,7 @@
             <li>
               <svg viewbox="0 0 100 100">
                 <circle cx="50" cy="50" r="45"></circle>
-                <circle class="cbar" cx="50" cy="50" r="45" style="--percent: 0.6"></circle>
+                <circle class="coutline" cx="50" cy="50" r="45" style="--percent: 0.6"></circle>
               </svg>
               <span class="tl-name">VMware</span>
               <span class="tl-exp">60%</span>
@@ -150,7 +150,7 @@
             <li>
               <svg viewbox="0 0 100 100">
                 <circle cx="50" cy="50" r="45"></circle>
-                <circle class="cbar" cx="50" cy="50" r="45" style="--percent: 0.5"></circle>
+                <circle class="coutline" cx="50" cy="50" r="45" style="--percent: 0.5"></circle>
               </svg>
               <span class="tl-name">Git</span>
               <span class="tl-exp">50%</span>
@@ -158,7 +158,7 @@
             <li>
               <svg viewbox="0 0 100 100">
                 <circle cx="50" cy="50" r="45"></circle>
-                <circle class="cbar" cx="50" cy="50" r="45" style="--percent: 0.75"></circle>
+                <circle class="coutline" cx="50" cy="50" r="45" style="--percent: 0.75"></circle>
               </svg>
               <span class="tl-name">Linux</span>
               <span class="tl-exp">75%</span>
